[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/kotlin/tools/KotlinTools.gd" type="Script" id=1]

[node name="KotlinToolMenuItem" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.5
margin_top = -176.5
margin_right = 307.5
margin_bottom = 176.5
window_title = "Kotlin"
script = ExtResource( 1 )

[node name="AddSupportButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -10.0
margin_right = 65.5
margin_bottom = 10.0
text = "Add Kotlin Support"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigGradleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = 23.5
margin_right = 48.5
margin_bottom = 43.5
text = "Config Gradle"

[node name="BuildButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 73.5
margin_right = 43.0
margin_bottom = 93.5
text = "Build Kotlin"
[connection signal="pressed" from="AddSupportButton" to="." method="_on_AddSupportButton_pressed"]
[connection signal="pressed" from="ConfigGradleButton" to="." method="_on_ConfigGradleButton_pressed"]
[connection signal="pressed" from="BuildButton" to="." method="_on_BuildButton_pressed"]
